# brightsidebudget

./: .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: nox-tests.yml
src/brightsidebudget/: __init__.py  account.py  bank_import.py  bassertion.py  bsberror.py  budget.py  config.py  i18n.py  importation.py  journal.py  posting.py  report.py  tag.py  txn.py  utils.py
src/brightsidebudget/account/: account.py  account_repository.py  account_type.py  excel_account_repository.py
src/brightsidebudget/bank_import/: bank_csv.py  bank_import.py  classifier.py  import_rule.py  import_service.py  newtxn.py
src/brightsidebudget/bassertion/: bassertion.py  bassertion_repository.py  excel_bassertion_repository.py
src/brightsidebudget/cli/: check_command.py  cli.py  export_command.py  import_command.py  import_txns.py  rewrite_command.py
src/brightsidebudget/config/: check_config.py  config.py  export_config.py  import_config.py  rewrite_config.py
src/brightsidebudget/journal/: excel_journal_repository.py  journal.py  journal_repository.py
src/brightsidebudget/txn/: posting.py  posting_extra.py  posting_repository.py  txn.py
src/brightsidebudget/utils/: excel_utils.py
tests/: conftest.py  test_account.py  test_bassertion.py  test_bassertions.py  test_config.py  test_importation.py  test_journal.py  test_posting.py  test_report.py  test_rtxns.py  test_txn.py  test_txns.py  test_utils.py
tests/fixtures/: accounts.csv  accounts_too_many_columns.csv  bank_checking.csv  bank_checking_bad_delimiter.csv  bank_checking_empty_amnt_col.csv  bank_checking_err_delimiter.csv  bank_csv.csv  bassertions.csv  budget.csv  config.json  journal.xlsx  rules.json  txns.csv
tests/fixtures/spreedtest/: accounts.csv  bassertions.csv  speedtest.py
tests/reports/: balance_sheet.html  balance_sheet.md  export_txns.csv  flow_stmt.html  flow_stmt.md  income_stmt.html  income_stmt.md
tests/test_account/: test_account.py  test_account_type.py
tests/test_bank_import/: test_bank_csv.py  test_classifier.py  test_import_rule.py
tests/test_bassertion/: test_bassertion.py
tests/test_journal/: test_journal.py  test_journal_repository.py
tests/test_txn/: test_posting.py  test_posting_extra.py  test_txn.py
