[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brightsidebudget"
version = "0.1.2"
authors = [
  { name="Vincent Archambault-Bouffard", email="archambault.v@gmail.com" },
]
description = "Accounting and budgeting library"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["budgeting", "accounting", "finance"]
dependencies = [
  "pandas",
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/archambaultv/brightsidebudget"
Issues = "https://github.com/archambaultv/brightsidebudget/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/brightsidebudget"]
