[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brightsidebudget"
version = "0.3.1"
authors = [
  { name="Vincent Archambault-Bouffard", email="archambault.v@gmail.com" },
]
description = "Accounting and budgeting library"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["budgeting", "accounting", "finance"]
dependencies = [
  "pydantic>=2.11.7",
  "click>=8.2.1",
  "dateutils>=0.6.12",
  "polars>=1.31.0",
  "xlsxwriter>=3.2.5",
  "fastexcel>=0.14.0",
]
requires-python = ">=3.10"

[project.scripts]
bsb = "brightsidebudget.cli.cli:main"

[project.urls]
Homepage = "https://github.com/archambaultv/brightsidebudget"
Issues = "https://github.com/archambaultv/brightsidebudget/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/brightsidebudget"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
